# simple-http-server

./: README.md  pyproject.toml
src/: main.py
src/project/: HTTPRequest.py  HTTPStatus.py  HttpServer.py  TcpServer.py  constants.py
src/static/: hello.html  index.html  style.css
