[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Piotr Droś <piotr.dros01@gmail.com>"]
readme = "README.md"
packages = [{include = "project", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

